--- a/Resources/manifest.yml
+++ b/Resources/manifest.yml
@@ -7,7 +7,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-or-later
 
-defaultWindowTitle: Space Station 14
+defaultWindowTitle: Radium
 windowIconSet: /Textures/Logo/icon
 splashLogo: /Textures/Logo/logo.png
 
